<resources>
    <string name="app_name">WildRift Dictionary</string>
    <string name="news">News</string>
    <string name="image">Image</string>
    <string name="champion">Champion</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="champion_universe">Champion Universe</string>
    <string name="item">Item</string>
    <string name="rune">Rune</string>
    <string name="recommend_items">Recommend Items</string>
    <string name="recommend_rune">Recommend Rune</string>
    <string name="recommend_spell">Recommend Spell</string>
    <string name="ability">Ability</string>
    <string name="sub_ability">Sub Ability</string>
    <string name="skill">Skill</string>
    <string name="upgraded_item">Upgraded Item</string>
    <string name="mid_item">Mid Item</string>
    <string name="enchantment_item">Enchantment Item</string>
    <string name="basic_item">Basic Item</string>
    <string name="key_stone">Key Stone</string>
    <string name="domination">Domination</string>
    <string name="resolve">Resolve</string>
    <string name="inspiration">Inspiration</string>
    <string name="universe">Universe</string>
</resources>