<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/championFragment"
        android:icon="@drawable/ic_dictionary"
        android:title="@string/champion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemFragment"
        android:icon="@drawable/ic_dictionary"
        android:title="@string/item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/runeFragment"
        android:icon="@drawable/ic_dictionary"
        android:title="@string/rune"
        app:showAsAction="ifRoom" />
</menu>